@@ -1,3 +1,8 @@
+Tue Jul 22 15:05:41 2003  George Lebl <jirka@5z.com>
+
+	* gui/greeter/greeter_canvas_item.c: set justification according to
+	  the anchor.  If the anchor centers the text, center it, etc...
+
 Tue Jul 22 14:31:25 2003  George Lebl <jirka@5z.com>
 
 	* daemon/auth.c, daemon/slave.c, daemon/server.c:
